Rename integer-gmp2's package name to `integer-gmp`
While the folder-name stays the same. This also bumps the version number
to 1.0.0.0 (old integer-gmp is at 0.5.1.x)

--- a/libraries/integer-gmp2/.gitignore
+++ b/libraries/integer-gmp2/.gitignore
@@ -6,8 +6,8 @@
 /dist-install/
 /ghc.mk
 /gmp/config.mk
-/include/HsIntegerGmp2.h
-/integer-gmp2.buildinfo
+/include/HsIntegerGmp.h
+/integer-gmp.buildinfo
 
 /gmp/gmp.h
 /gmp/gmpbuild
