--- a/libraries/base/base.cabal
+++ b/libraries/base/base.cabal
@@ -108,7 +108,7 @@ Library
         cpp-options: -DOPTIMISE_INTEGER_GCD_LCM
 
     if flag(integer-gmp2)
-        build-depends: integer-gmp2
+        build-depends: integer-gmp >= 1.0 && < 1.1
         cpp-options: -DOPTIMISE_INTEGER_GCD_LCM
 
     exposed-modules:
