Move core2core plugins to a new module Plugins

--- a/compiler/ghc.cabal.in
+++ b/compiler/ghc.cabal.in
@@ -317,6 +317,7 @@ Library
         PackageConfig
         Packages
         PlatformConstants
+        Plugins
         PprTyThing
         StaticFlags
         SysTools
