Generalize exposed-modules field in installed package database
Summary:
Instead of recording exposed-modules and reexported-modules as seperate
fields in the installed package database, this commit merges them into
a single field (exposed-modules).  The motivation for this change is
in preparation for the inclusion of *signatures* into the installed
package database, which may also be reexported.  Merging the representation
means that we can treat reexports uniformly, no matter if they're a normal
module or a signature.

This commit adds a stub for signatures, but that code isn't wired up to
anything yet.

Contains Cabal submodule update to accommodate these changes.

Signed-off-by: Edward Z. Yang <ezyang@cs.stanford.edu>

Test Plan: validate

Reviewers: simonpj, duncan, austin

Subscribers: thomie, carter, simonmar

Differential Revision: https://phabricator.haskell.org/D421

--- a/testsuite/tests/cabal/Makefile
+++ b/testsuite/tests/cabal/Makefile
@@ -244,9 +244,9 @@ ghcpkg07:
 	$(LOCAL_GHC_PKG07) init $(PKGCONF07)
 	$(LOCAL_GHC_PKG07) register --force test.pkg 2>/dev/null
 	$(LOCAL_GHC_PKG07) register --force test7a.pkg 2>/dev/null
-	$(LOCAL_GHC_PKG07) field testpkg7a reexported-modules
+	$(LOCAL_GHC_PKG07) field testpkg7a exposed-modules
 	$(LOCAL_GHC_PKG07) register --force test7b.pkg 2>/dev/null
-	$(LOCAL_GHC_PKG07) field testpkg7b reexported-modules
+	$(LOCAL_GHC_PKG07) field testpkg7b exposed-modules
 
 recache_reexport:
 	@rm -rf recache_reexport_db/package.cache
