--- a/testsuite/.gitignore
+++ b/testsuite/.gitignore
@@ -114,6 +114,12 @@ mk/ghcconfig*_inplace_bin_ghc-stage2.exe.mk
 /tests/cabal/cabal05/r-0.1.0.0/
 /tests/cabal/cabal06/inst-*/
 /tests/cabal/cabal06/tmp*
+/tests/cabal/sigcabal01/Main
+/tests/cabal/sigcabal01/tmp*
+/tests/cabal/sigcabal01/inst-*
+/tests/cabal/sigcabal01/p_lazy
+/tests/cabal/sigcabal01/p_strict
+/tests/cabal/sigcabal01/containers
 /tests/cabal/local01.package.conf/
 /tests/cabal/local03.package.conf/
 /tests/cabal/local04.package.conf/
