--- a/compiler/ghc.cabal.in
+++ b/compiler/ghc.cabal.in
@@ -219,6 +219,7 @@ Library
         Bitmap
         CodeGen.Platform
         CodeGen.Platform.ARM
+        CodeGen.Platform.ARM64
         CodeGen.Platform.NoRegs
         CodeGen.Platform.PPC
         CodeGen.Platform.PPC_Darwin
