--- a/compiler/ghc.cabal.in
+++ b/compiler/ghc.cabal.in
@@ -318,6 +318,8 @@ Library
         PackageConfig
         Packages
         PlatformConstants
+        Plugins
+        TcPluginM
         PprTyThing
         StaticFlags
         SysTools
