--- a/libraries/base/base.cabal
+++ b/libraries/base/base.cabal
@@ -245,6 +245,7 @@ Library
         GHC.Int
         GHC.List
         GHC.MVar
+        GHC.Natural
         GHC.Num
         GHC.PArr
         GHC.Pack
@@ -265,6 +266,7 @@ Library
         GHC.Weak
         GHC.Word
         Numeric
+        Numeric.Natural
         Prelude
         System.CPUTime
         System.Console.GetOpt
