accessors to RTS flag values -- #5364
Summary: Implementation of #5364. Mostly boilerplate, reading FILE fields is missing.

Test Plan:
- Get some feedback on missing parts. (FILE fields)
- Get some feedback on module name.
- Get some feedback on other things.
- Get code reviewed.
- Make sure test suite is passing. (I haven't run it myself)

Reviewers: hvr, austin, ezyang

Reviewed By: ezyang

Subscribers: ekmett, simonmar, ezyang, carter, thomie

Differential Revision: https://phabricator.haskell.org/D306

GHC Trac Issues: #5364

Conflicts:
	includes/rts/Flags.h

--- a/libraries/base/base.cabal
+++ b/libraries/base/base.cabal
@@ -253,6 +253,7 @@ Library
         GHC.Ptr
         GHC.Read
         GHC.Real
+        GHC.RTS.Flags
         GHC.ST
         GHC.STRef
         GHC.Show
@@ -309,6 +310,7 @@ Library
         cbits/inputReady.c
         cbits/md5.c
         cbits/primFloat.c
+        cbits/rts.c
         cbits/sysconf.c
 
     include-dirs: include
