Tidy up tracing somewhat
This is a knock-on from the -dump-to-file changes.
(I found that -ddump-cs-trace stuff wasn't coming out!)

--- a/testsuite/tests/indexed-types/should_fail/Makefile
+++ b/testsuite/tests/indexed-types/should_fail/Makefile
@@ -13,6 +13,6 @@ T8227:
 # T8129 is trying to ensure that we don't get an 
 # an asertion failure with -ddump-tc-trace
 T8129:
-	-'$(TEST_HC)' $(TEST_HC_OPTS) -c -ddump-tc-trace T8129.hs 2> T8129.trace
+	-'$(TEST_HC)' $(TEST_HC_OPTS) -c -ddump-tc-trace T8129.hs 2> T8129.trace > T8129.trace
 	grep deduce T8129.trace
 
