Make annotations test case cleaning less aggressive
cf. a4ec0c92

--- a/testsuite/tests/ghc-api/annotations/Makefile
+++ b/testsuite/tests/ghc-api/annotations/Makefile
@@ -5,15 +5,18 @@ include $(TOP)/mk/test.mk
 clean:
 	rm -f *.o *.hi
 
-annotations: clean
+annotations: 
+	rm -f annotations.o annotations.hi
 	'$(TEST_HC)' $(TEST_HC_OPTS) --make -v0 -package ghc annotations
 	./annotations "`'$(TEST_HC)' $(TEST_HC_OPTS) --print-libdir | tr -d '\r'`"
 
-parseTree: clean
+parseTree: 
+	rm -f parseTree.o parseTree.hi
 	'$(TEST_HC)' $(TEST_HC_OPTS) --make -v0 -package ghc parseTree
 	./parseTree "`'$(TEST_HC)' $(TEST_HC_OPTS) --print-libdir | tr -d '\r'`"
 
-comments: clean
+comments: 
+	rm -f comments.o comments.hi
 	'$(TEST_HC)' $(TEST_HC_OPTS) --make -v0 -package ghc comments
 	./comments "`'$(TEST_HC)' $(TEST_HC_OPTS) --print-libdir | tr -d '\r'`"
 
