--- a/testsuite/tests/ghc-api/annotations-literals/Makefile
+++ b/testsuite/tests/ghc-api/annotations-literals/Makefile
@@ -5,11 +5,13 @@ include $(TOP)/mk/test.mk
 clean:
 	rm -f *.o *.hi
 
-literals: clean
+literals:
+	rm -f literals.o literals.hi
 	'$(TEST_HC)' $(TEST_HC_OPTS) --make -v0 -package ghc literals
 	./literals "`'$(TEST_HC)' $(TEST_HC_OPTS) --print-libdir | tr -d '\r'`"
 
-parsed: clean
+parsed:
+	rm -f parsed.o parsed.hi
 	'$(TEST_HC)' $(TEST_HC_OPTS) --make -v0 -package ghc parsed
 	./parsed "`'$(TEST_HC)' $(TEST_HC_OPTS) --print-libdir | tr -d '\r'`"
 
