--- a/testsuite/tests/rename/should_fail/Makefile
+++ b/testsuite/tests/rename/should_fail/Makefile
@@ -4,5 +4,5 @@ include $(TOP)/mk/test.mk
 
 T9032:
 	'$(TEST_HC)' $(TEST_HC_OPTS) -c -fforce-recomp T9032.hs
-	'$(TEST_HC)' $(TEST_HC_OPTS) -c -fforce-recomp -DERR T9032.hs
+	-'$(TEST_HC)' $(TEST_HC_OPTS) -c -fforce-recomp -DERR T9032.hs
 
