Add a comment to user.config explaining its purpose.

--- a/cfg/user.config
+++ b/cfg/user.config
@@ -1,1 +1,4 @@
+# Override default settings (stored in default.config file):
+#===========================================================
+
 lax-dependencies = YES
