Fix #9243 so recompilation avoidance works with -fno-code
Summary:
Where we track timestamps of object files, also track timestamps
for interface files.  When -fno-code -fwrite-interface is enabled, use
the interface file timestamp as an extra check to see if the files are
up-to-date.  We had to apply this logic to one-shot and make modes.

This fix would be good to merge into 7.10; it makes using -fno-code
-fwrite-interface for flywheel type checking usable.

Signed-off-by: Edward Z. Yang <ezyang@cs.stanford.edu>

Test Plan: validate and new test cases

Reviewers: austin

Subscribers: carter, thomie

Differential Revision: https://phabricator.haskell.org/D596

GHC Trac Issues: #9243

--- a/testsuite/.gitignore
+++ b/testsuite/.gitignore
@@ -574,8 +574,12 @@ mk/ghcconfig*_inplace_bin_ghc-stage2.exe.mk
 /tests/driver/out019/
 /tests/driver/recomp001/B.hs
 /tests/driver/recomp001/C
+/tests/driver/retc001/B.hs
+/tests/driver/retc001/C
 /tests/driver/recomp003/Data/
 /tests/driver/recomp003/err
+/tests/driver/retc003/Data/
+/tests/driver/retc003/err
 /tests/driver/recomp004/MainX
 /tests/driver/recomp004/MainX.hs
 /tests/driver/recomp004/c.c
