Refine test case for #9938
By passing -O2, the bug appears depending on the order of clauses in
"solve", hence adding T9938B as the other variant.

Currently, T9938 is marked as broken, but maybe the bug is actually in
T9938B, where something (possibly inlining, as suggested by rwbarton)
affected the requirement to link against transformers.

--- a/testsuite/tests/driver/Makefile
+++ b/testsuite/tests/driver/Makefile
@@ -590,5 +590,11 @@ write_interface_make:
 .PHONY: T9938
 T9938:
 	$(RM) -rf T9938.o T9938.hi T9938
-	"$(TEST_HC)" -c T9938.hs
-	"$(TEST_HC)" T9938.o -o T9938
+	"$(TEST_HC)" $(TEST_HC_OPTS) -O2 -c T9938.hs
+	"$(TEST_HC)" $(TEST_HC_OPTS) -O2 T9938.o -o T9938
+
+.PHONY: T9938B
+T9938B:
+	$(RM) -rf T9938B.o T9938B.hi T9938B
+	"$(TEST_HC)" $(TEST_HC_OPTS) -O2 -c T9938B.hs
+	"$(TEST_HC)" $(TEST_HC_OPTS) -O2 T9938B.o -o T9938B
