--- a/cfg/default.config.in
+++ b/cfg/default.config.in
@@ -61,6 +61,8 @@ conf-ld-linker-args-stage-0  = @CONF_LD_LINKER_OPTS_STAGE0@
 conf-ld-linker-args-stage-1  = @CONF_LD_LINKER_OPTS_STAGE1@
 conf-ld-linker-args-stage-2  = @CONF_LD_LINKER_OPTS_STAGE2@
 
+src-hc-opts                  = -H32m -O
+
 # Include and library directories:
 #=================================
 
