--- a/cfg/default.config.in
+++ b/cfg/default.config.in
@@ -31,6 +31,7 @@ gcc-lt-46    = @GccLT46@
 lax-dependencies     = NO
 dynamic-ghc-programs = NO
 supports-package-key = @SUPPORTS_PACKAGE_KEY@
+solaris-broken-shld  = @SOLARIS_BROKEN_SHLD@
 
 # Information about host and target systems:
 #===========================================
