Compile the RTS with -g by default
Having debugging info doesn't hurt performance, can be stripped from
binaries, and it's useful for debugging and profiling.

--- a/mk/config.mk.in
+++ b/mk/config.mk.in
@@ -344,7 +344,7 @@ LAX_DEPENDENCIES = NO
 # the debugging RTS flavour, rts/ghc.mk overrides these to turn off
 # optimisation.
 GhcRtsHcOpts=-O2
-GhcRtsCcOpts=-O2 -fomit-frame-pointer
+GhcRtsCcOpts=-O2 -fomit-frame-pointer -g
 
 # Include support for CPU performance counters via the PAPI library in the RTS?
 # (PAPI: http://icl.cs.utk.edu/papi/)
