--- a/cfg/default.config.in
+++ b/cfg/default.config.in
@@ -5,17 +5,18 @@
 #===================
 
 system-ghc     = @WithGhc@
-system-ghc-pkg = @GhcPkgCmd@
-
-ghc-cabal      = @hardtop@/inplace/bin/ghc-cabal
-
 ghc-stage1     = @hardtop@/inplace/bin/ghc-stage1
 ghc-stage2     = @hardtop@/inplace/bin/ghc-stage2
 ghc-stage3     = @hardtop@/inplace/bin/ghc-stage3
 
+system-ghc-pkg = @GhcPkgCmd@
 ghc-pkg        = @hardtop@/inplace/bin/ghc-pkg
 
+system-gcc     = @CC_STAGE0@
 gcc            = @WhatGccIsCalled@
+
+ghc-cabal      = @hardtop@/inplace/bin/ghc-cabal
+
 ld             = @LdCmd@
 ar             = @ArCmd@
 alex           = @AlexCmd@
@@ -58,21 +59,21 @@ project-version      = @ProjectVersion@
 # Compilation and linking flags:
 #===============================
 
-conf-cc-args-stage-0         = @CONF_CC_OPTS_STAGE0@
-conf-cc-args-stage-1         = @CONF_CC_OPTS_STAGE1@
-conf-cc-args-stage-2         = @CONF_CC_OPTS_STAGE2@
+conf-cc-args-stage0         = @CONF_CC_OPTS_STAGE0@
+conf-cc-args-stage1         = @CONF_CC_OPTS_STAGE1@
+conf-cc-args-stage2         = @CONF_CC_OPTS_STAGE2@
 
-conf-cpp-args-stage-0        = @CONF_CPP_OPTS_STAGE0@
-conf-cpp-args-stage-1        = @CONF_CPP_OPTS_STAGE1@
-conf-cpp-args-stage-2        = @CONF_CPP_OPTS_STAGE2@
+conf-cpp-args-stage0        = @CONF_CPP_OPTS_STAGE0@
+conf-cpp-args-stage1        = @CONF_CPP_OPTS_STAGE1@
+conf-cpp-args-stage2        = @CONF_CPP_OPTS_STAGE2@
 
-conf-gcc-linker-args-stage-0 = @CONF_GCC_LINKER_OPTS_STAGE0@
-conf-gcc-linker-args-stage-1 = @CONF_GCC_LINKER_OPTS_STAGE1@
-conf-gcc-linker-args-stage-2 = @CONF_GCC_LINKER_OPTS_STAGE2@
+conf-gcc-linker-args-stage0 = @CONF_GCC_LINKER_OPTS_STAGE0@
+conf-gcc-linker-args-stage1 = @CONF_GCC_LINKER_OPTS_STAGE1@
+conf-gcc-linker-args-stage2 = @CONF_GCC_LINKER_OPTS_STAGE2@
 
-conf-ld-linker-args-stage-0  = @CONF_LD_LINKER_OPTS_STAGE0@
-conf-ld-linker-args-stage-1  = @CONF_LD_LINKER_OPTS_STAGE1@
-conf-ld-linker-args-stage-2  = @CONF_LD_LINKER_OPTS_STAGE2@
+conf-ld-linker-args-stage0  = @CONF_LD_LINKER_OPTS_STAGE0@
+conf-ld-linker-args-stage1  = @CONF_LD_LINKER_OPTS_STAGE1@
+conf-ld-linker-args-stage2  = @CONF_LD_LINKER_OPTS_STAGE2@
 
 src-hc-args                  = -H32m -O
 
