API Annotations documentation update, parsing issue, add example test
Summary:
Add a reference note to each AnnKeywordId haddock comment so GHC
developers will have an idea why they are there.

Add a new test to ghc-api/annotations to serve as a template for other
GHC developers when they need to update the parser. It provides output
which checks that each SrcSpan that an annotation is attached to
actually appears in the `ParsedSource`, and lists the individual
annotations. The idea is that a developer writes a version of this
which parses a sample file using whatever syntax is changed in
Parser.y, and can then check that all the annotations come through.

Depends on D538

Test Plan: ./validate

Reviewers: simonpj, hvr, austin

Reviewed By: austin

Subscribers: thomie, jstolarek

Differential Revision: https://phabricator.haskell.org/D620

(cherry picked from commit 851ed7211fb18fea938be84c99b6389f6762b30d)

--- a/testsuite/tests/ghc-api/annotations/Makefile
+++ b/testsuite/tests/ghc-api/annotations/Makefile
@@ -4,7 +4,7 @@ include $(TOP)/mk/test.mk
 
 clean:
 	rm -f *.o *.hi
-	rm -f annotations comments parseTree
+	rm -f annotations comments parseTree exampleTest
 
 annotations: 
 	rm -f annotations.o annotations.hi
@@ -21,5 +21,9 @@ comments:
 	'$(TEST_HC)' $(TEST_HC_OPTS) --make -v0 -package ghc comments
 	./comments "`'$(TEST_HC)' $(TEST_HC_OPTS) --print-libdir | tr -d '\r'`"
 
+exampleTest:
+	rm -f exampleTest.o exampleTest.hi
+	'$(TEST_HC)' $(TEST_HC_OPTS) --make -v0 -package ghc exampleTest
+	./exampleTest "`'$(TEST_HC)' $(TEST_HC_OPTS) --print-libdir | tr -d '\r'`"
 
 .PHONY: clean
